Finish merging changes from v1.11.3-RC1